--- a/Wray_Tracker/Views/Home/Dashboard.cshtml
+++ b/Wray_Tracker/Views/Home/Dashboard.cshtml
@@ -1,13 +1,13 @@
-﻿
-@{
+﻿@{
     ViewBag.Title = "Dashboard";
+}
 
     <!-- Content Header (Page header) -->
     <div class="content-header">
         <div class="container-fluid">
             <div class="row mb-2">
                 <div class="col-sm-6">
-                    <h1 class="m-0 text-dark">Dashboard</h1>
+                    <h1 class="m-0 text-dark">My Dashboard</h1>
                 </div><!-- /.col -->
                 <div class="col-sm-6">
                     <ol class="breadcrumb float-sm-right">
@@ -854,7 +854,5 @@
         </div><!--/. container-fluid -->
     </section>
     <!-- /.content -->
-}
 
-<h2>Dashboard</h2>
 
