--- a/Wray_Tracker/Views/Home/Index.cshtml
+++ b/Wray_Tracker/Views/Home/Index.cshtml
@@ -1,5 +1,8 @@
-﻿
-@{ Layout = null; }
+﻿@{ Layout = null; }
+
+@using Wray_Tracker.Models
+@model LoginViewModel
+
 
 <!DOCTYPE html>
 <html>
@@ -28,13 +31,13 @@
 
     <!-- Favicon -->
     <link rel="shortcut icon" href="~/Images/favicon-32x32.png">
-    
+
 
 </head>
 <body class="hold-transition login-page">
     <div class="login-box">
         <div class="login-logo">
-            <a href="../../index2.html"><b>Admin</b>LTE</a>
+            <b>Smaug</b>Tracker
         </div>
         <!-- /.login-logo -->
         <div class="card">
@@ -42,42 +45,39 @@
                 <p class="login-box-msg">Sign in to start your session</p>
 
                 @* Start of form, needs to be changed with razor code *@
-                @using (Html.BeginForm("Dashboard", "Home", FormMethod.Post, new { @class = "card" }))
-                { 
+                @using (Html.BeginForm("Login", "Account", FormMethod.Post, new { @class = "card" }))
+                {
                     @Html.AntiForgeryToken()
-                <form action="" method="post">
-                    <div class="input-group mb-3">
-                        <input type="email" class="form-control" placeholder="Email">
-                        <div class="input-group-append">
-                            <div class="input-group-text">
-                                <span class="fas fa-envelope"></span>
+                        <div class="input-group mb-3">
+                            @Html.EditorFor(model => model.Email, new { htmlAttributes = new { @class = "form-control", placeholder = "Email" } })
+                            <div class="input-group-append">
+                                <div class="input-group-text">
+                                    <span class="fas fa-envelope"></span>
+                                </div>
                             </div>
                         </div>
-                    </div>
-                    <div class="input-group mb-3">
-                        <input type="password" class="form-control" placeholder="Password">
-                        <div class="input-group-append">
-                            <div class="input-group-text">
-                                <span class="fas fa-lock"></span>
+                        <div class="input-group mb-3">
+                            @Html.EditorFor(model => model.Password, new { htmlAttributes = new { @class = "form-control", placeholder = "Password" } })
+                            <div class="input-group-append">
+                                <div class="input-group-text">
+                                    <span class="fas fa-lock"></span>
+                                </div>
                             </div>
                         </div>
-                    </div>
-                    <div class="row">
-                        <div class="col-8">
-                            <div class="icheck-primary">
-                                <input type="checkbox" id="remember">
-                                <label for="remember">
-                                    Remember Me
-                                </label>
+                        <div class="row">
+                            <div class="col-8">
+                                <div class="icheck-primary">
+                                    @Html.CheckBoxFor(m => m.RememberMe)
+                                    @Html.LabelFor(m => m.RememberMe)
+                                </div>
                             </div>
+                            <!-- /.col -->
+                            <div class="col-4">
+                                <button type="submit" class="btn btn-primary btn-block">Sign In</button>
+                            </div>
+                            <!-- /.col -->
                         </div>
-                        <!-- /.col -->
-                        <div class="col-4">
-                            <button type="submit" class="btn btn-primary btn-block">Sign In</button>
-                        </div>
-                        <!-- /.col -->
-                    </div>
-                </form>
+                   
                 }
 
                 <div class="social-auth-links text-center mb-3">
