--- a/Wray_Tracker/Views/Home/Index.cshtml
+++ b/Wray_Tracker/Views/Home/Index.cshtml
@@ -92,7 +92,7 @@
                 <!-- /.social-auth-links -->
 
                 <p class="mb-1">
-                    <a href="forgot-password.html">I forgot my password</a>
+                    <a href="@Url.Action("ForgotPassword", "Account")">I forgot my password</a>
                 </p>
                 <p class="mb-0">
                     <a href="@Url.Action("Register", "Account")" class="text-center">Register a new membership</a>
