update to files
worked in password recovery  and email functionality.

--- a/Wray_Tracker/Views/Account/ForgotPassword.cshtml
+++ b/Wray_Tracker/Views/Account/ForgotPassword.cshtml
@@ -35,10 +35,13 @@
         <div class="card">
             <div class="card-body login-card-body">
                 <p class="login-box-msg">You forgot your password? Here you can easily retrieve a new password.</p>
-
-                <form action="recover-password.html" method="post">
+                @using (Html.BeginForm("ForgotPassword", "Account", FormMethod.Post, new { @class = "card"}))
+                {
+                    @Html.AntiForgeryToken()
+                    @Html.ValidationSummary("", new { @class = "text-danger" })
+                    
                     <div class="input-group mb-3">
-                        <input type="email" class="form-control" placeholder="Email">
+                        @Html.EditorFor(model => model.Email, new { htmlAttributes = new { @class = "form-control", placeholder = "Email" } })
                         <div class="input-group-append">
                             <div class="input-group-text">
                                 <span class="fas fa-envelope"></span>
@@ -51,7 +54,7 @@
                         </div>
                         <!-- /.col -->
                     </div>
-                </form>
+                }
 
                 <p class="mt-3 mb-1">
                     <a href="@Url.Action("Index", "Home")">Login</a>
