update to files
working in ticket functionality

--- a/Wray_Tracker/Views/Home/Dashboard.cshtml
+++ b/Wray_Tracker/Views/Home/Dashboard.cshtml
@@ -548,6 +548,8 @@
                         <!-- /.col -->
                     </div>
                     <!-- /.row -->
+
+                    <!-- Everyone will need to have access to data tables -->
                     <!-- TABLE: LATEST ORDERS -->
                     <div class="card">
                         <div class="card-header border-transparent">
@@ -645,6 +647,7 @@
                     </div>
                     <!-- /.card -->
                 </div>
+
                 <!-- /.col -->
 
                 <div class="col-md-4">
