--- a/Wray_Tracker/Views/Tickets/Details.cshtml
+++ b/Wray_Tracker/Views/Tickets/Details.cshtml
@@ -51,11 +51,11 @@
         </dd>
 
         <dt>
-            @Html.DisplayNameFor(model => model.TicketPropertyId)
+            @Html.DisplayNameFor(model => model.TicketPriorityId)
         </dt>
 
         <dd>
-            @Html.DisplayFor(model => model.TicketPropertyId)
+            @Html.DisplayFor(model => model.TicketPriorityId)
         </dd>
 
         <dt>
