update to files
continued work on ticket functionality

--- a/Wray_Tracker/Views/Account/Register.cshtml
+++ b/Wray_Tracker/Views/Account/Register.cshtml
@@ -8,7 +8,7 @@
 <head>
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <title>Smaug Tracker | Registration Page</title>
+    <title>Dragon Fly | Registration Page</title>
     <!-- Tell the browser to be responsive to screen width -->
     <meta name="viewport" content="width=device-width, initial-scale=1">
 
@@ -34,7 +34,7 @@
     <body class="hold-transition register-page">
         <div class="register-box">
             <div class="register-logo">
-                <a href="../../index2.html"><b>Smaug</b>Tracker</a>
+                <b>Dragon</b>Fly
             </div>
 
             <div class="card">
