--- a/Wray_Tracker/Views/Shared/_Layout.cshtml
+++ b/Wray_Tracker/Views/Shared/_Layout.cshtml
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta http-equiv="x-ua-compatible" content="ie=edge">
 
-    <title>Smaug Tracker</title>
+    <title>Dragon Fly</title>
 
     <!-- Font Awesome Icons -->
     <link href="~/Content/all.min.css" rel="stylesheet" />
@@ -97,9 +97,9 @@
         <aside class="main-sidebar sidebar-dark-primary elevation-4">
             <!-- Brand Logo -->
             <a href="index3.html" class="brand-link" style="background-color: #001f3f;">
-                <img src="~/Images/d-and-d-brands.png" alt="Smaug Logo" class="brand-image img-circle elevation-3"
+                <img src="~/Images/d-and-d-brands.png" alt="DragonFly Logo" class="brand-image img-circle elevation-3"
                      style="opacity: .8">
-                <span class="brand-text font-weight-light">Smaug Tracker</span>
+                <span class="brand-text font-weight-light">Dragon Fly</span>
             </a>
 
             <!-- Sidebar -->
