--- a/Wray_Tracker/Views/Account/ResetPasswordConfirmation.cshtml
+++ b/Wray_Tracker/Views/Account/ResetPasswordConfirmation.cshtml
@@ -4,7 +4,7 @@
 <head>
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <title>Smaug Tracker | Recover Password</title>
+    <title>Dragon Fly | Recover Password</title>
     <!-- Tell the browser to be responsive to screen width -->
     <meta name="viewport" content="width=device-width, initial-scale=1">
 
@@ -27,7 +27,7 @@
 <body class="hold-transition login-page">
     <div class="login-box">
         <div class="login-logo">
-            <b>Smaug</b>Tracker
+            <b>Dragon</b>Fly
         </div>
         <!-- /.login-logo -->
         <div class="card">
