--- a/Wray_Tracker/Views/Home/Index.cshtml
+++ b/Wray_Tracker/Views/Home/Index.cshtml
@@ -9,7 +9,7 @@
 <head>
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <title>Smaug Tracker | Log in</title>
+    <title>Dragon Fly | Log in</title>
     <!-- Tell the browser to be responsive to screen width -->
     <meta name="viewport" content="width=device-width, initial-scale=1">
 
@@ -37,7 +37,7 @@
 <body class="hold-transition login-page">
     <div class="login-box">
         <div class="login-logo">
-            <b>Smaug</b>Tracker
+            <b>Dragon</b>Fly
         </div>
         <!-- /.login-logo -->
         <div class="card">
