--- a/Wray_Tracker/Views/Tickets/Create.cshtml
+++ b/Wray_Tracker/Views/Tickets/Create.cshtml
@@ -16,6 +16,7 @@
         <hr />
         @Html.ValidationSummary(true, "", new { @class = "text-danger" })
 
+        @* This dropdown list can be very helpful BUT I only want to see it if I am coming in from the side nav *@
         @if (Model.ProjectId == 0)
         {
         <div class="form-group">
